--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,10 +12,7 @@
     <div class="wrap">
       <div class="masthead">
         <div class="container">
-          <h3 class="masthead-title">
-            <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-            <small>{{ site.tagline }}</small>
-          </h3>
+	   <img src="{{ site.baseurl }}/public/logo2.gif"></img>
         </div>
       </div>
 
